ui/document.css
@import url('https://rsms.me/inter/inter.css');
html { font-family: 'Inter', sans-serif; }

@supports (font-variation-settings: normal) 
{
  html { font-family: 'Inter var', sans-serif; } 
}


body
{
    margin:           0;
    user-select:      none;
    font-family:      Inter;

    -webkit-touch-callout: none; 
      -webkit-user-select: none; 
       -khtml-user-select: none; 
         -moz-user-select: none; 
          -ms-user-select: none; 
              user-select: none; 

    overflow:         hidden;
}


/* body:active
{
    box-shadow: 0 0 0 1px red inset;
} */


.figma-light body { background: var(--figma-color-bg); }
.figma-dark  body { background: #252524; }


div
{
    margin:  0;
    padding: 0;
}

